#2025_44 Added API function lib.UpdateIconsRecursively(comboBox, rowControl, optional: data) Update the path upwards from submenu's rowControl to the parent menus and refresh the icons at the entries. Can be called manually from a callback of any submenu entry e.g. or will be automatically called if the submenu's entry data.recursiveIconUpdate == true

-v- ---------------LSM v2.37 - 2025-09-21--------------------------------------------------------------------------- -v-
[Added]
-2025_37    Added API function AddCustomScrollableMenuRadioButton(text, callback, checked, buttonGroup, additionalData)
-2025_35    Added entryType LSM_ENTRY_TYPE_EDITBOX
-2025_36    Added API function AddCustomScrollableMenuEditBox(text, callback, editBoxData, additionalData)
-2025_38    Added entryType LSM_ENTRY_TYPE_EDITBOX
-2025_41    Added API function AddCustomScrollableMenuSlider(text, callback, sliderData, additionalData)

[Fixed]
-2025_39 	Clicking icon in contextmenu's submenu will close the entry


-v- ---------------LSM v2.36 - 2025-05-30--------------------------------------------------------------------------- -v-
[Added]
-2025_32    Added  option "minDropdownWidth": Width of the dropdowns will be minimum this width (minimum width is 50, or 125 if the search editbox header is enabled. Attention: If the minDropdownWidth is > than the max it will overwrite the maximum dropdown width that way!)
-2025_34    Added .option "submenuOpenToSide": Open the submenu forced to a specified side, e.g. "left" or "right". If this option is not specified the submenu autmatically chooses where to open to based on the available space left until the menu's width touches the screen's edge.

[Changed]
--2025_33	Changed params of API function AddCustomScrollableSubMenuEntry(text, entries, callbackFunc) -> Added callbackFunc. If provided the submenu opening entry will use this callback function once clicked
