@@ -285,7 +285,6 @@ Max error #: 2025_44
 #2025_42 is not working for the icons, they do not update at the submenu/menus
 
 [WORKING ON]
-#2025_45 Register special contextMenu OnShow and/or OnHide callback for registered contextMenus (done at ShowCustomScrollableMenu, last parameter specialCallbackData.addonName and specialCallbackData.onHideCallback e.g.)
 
 [Fixed]
 
@@ -293,6 +292,7 @@ Max error #: 2025_44
 #2025_42 Automatically update all entries (checkbox/radiobutton checked, and all entries enabled state) in a submenu, if e.g. any other entry was clicked
 #2025_43 Automatically fix wrong formated .icon table format
 #2025_44 New API function lib.OnEntryCallbackUpdateIcons to check from submenu up to main menu if any icon needs an update at the current path. Automatically called if an entry's data contains data.recursiveIconUpdate = true
+#2025_45 Register special contextMenu OnShow and/or OnHide callback for registered contextMenus (done at ShowCustomScrollableMenu, last parameter specialCallbackData.addonName and specialCallbackData.onHideCallback e.g.)
 
 [Changed]
 
