@@ -10,6 +10,8 @@
 --		boolean automaticSubmenuRefresh:optional		Boolean or function returning boolean which controls if the automatic refresh of the submenu's scrolllist should happen, if you click/change any entry's value. This would be needed
 --												e.g. if you want the entry B to react on entry A's value (e.g. checkboxes -> enabled state). Default value is false
 #2025_44 Added API function lib.UpdateIconsRecursively(comboBox, rowControl, optional: data) Update the path upwards from submenu's rowControl to the parent menus and refresh the icons at the entries. Can be called manually from a callback of any submenu entry e.g. or will be automatically called if the submenu's entry data.recursiveIconUpdate == true
+#2025_45 Register special contextMenu OnShow and/or OnHide callback for registered contextMenus (done at ShowCustomScrollableMenu, last parameter specialCallbackData.addonName and specialCallbackData.onHideCallback e.g.)
+
 
 -v- ---------------LSM v2.37 - 2025-09-21--------------------------------------------------------------------------- -v-
 [Added]
